Добавил сервис комментариев. Добавил тесты к новому сервису. Добавил клиента сервиса коментариев на фронте. Добавил вьюху коментариев на фронте.