@@ -5,17 +5,16 @@ import org.springframework.core.ParameterizedTypeReference;
 import org.springframework.http.MediaType;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.client.RestClient;
-import ru.tms.components.Suite;
-import ru.tms.components.Test;
 import ru.tms.dto.SuiteChild;
 import ru.tms.dto.SuiteDto;
+import ru.tms.dto.TestDto;
 import ru.tms.models.ParentWebModel;
 import ru.tms.models.SuiteWebModel;
 import ru.tms.models.TestWebModel;
 import ru.tms.services.client.SuiteClient;
 
 import java.util.*;
-import java.util.stream.Collectors;
+import java.util.stream.Stream;
 
 @RequiredArgsConstructor
 public class SuiteService implements SuiteClient {
@@ -24,19 +23,19 @@ public class SuiteService implements SuiteClient {
     private final RestClient restClient;
 
     @Override
-    public Suite getSuite(Long suiteId) {
+    public SuiteDto getSuiteById(Long suiteId) {
         return this.restClient.get()
                 .uri("/api/suite{suiteId}",suiteId)
                 .retrieve()
-                .body(Suite.class);
+                .body(SuiteDto.class);
     }
 
     @Override
-    public List<Suite> getAllSuitesByProject(Long projectId) {
+    public List<SuiteDto> getAllSuitesByProject(Long projectId) {
         return this.restClient.get()
                 .uri("/api/suites/{projectId}",projectId)
                 .retrieve()
-                .body(new ParameterizedTypeReference<List<Suite>>(){});
+                .body(new ParameterizedTypeReference<List<SuiteDto>>(){});
     }
 
     @Override
@@ -77,14 +76,14 @@ public class SuiteService implements SuiteClient {
 
     public List<SuiteChild> suiteChild(Long projectId) {
         List<SuiteChild> suiteChildren = new LinkedList<>();
-        Collection<Suite> allSuite = getAllSuitesByProject(projectId);
-        List<Suite> parent = allSuite.stream().filter(x -> x.getParentId() == null).collect(Collectors.toList());
-        List<Suite> childs = allSuite.stream().filter(x -> x.getParentId() != null).collect(Collectors.toList());
+        Collection<SuiteDto> allSuite = getAllSuitesByProject(projectId);
+        List<SuiteDto> parent = allSuite.stream().filter(x -> x.getParentId() == null).toList();
+        List<SuiteDto> childs = allSuite.stream().filter(x -> x.getParentId() != null).toList();
         parent.forEach(x -> {
             suiteChildren.add(new SuiteChild(
                     x,
-                    children(x, childs).stream().collect(Collectors.toList()),
-                    allChildren(childs, x).stream().collect(Collectors.toList()),
+                    children(x, childs).stream().toList(),
+                    allChildren(childs, x).stream().toList(),
                     testService.getAllTestBySuiteId(x.getId())));
         });
         return suiteChildren;
@@ -92,10 +91,10 @@ public class SuiteService implements SuiteClient {
 
     public List<ParentWebModel> suiteChildNew(Long projectId) {
         List<ParentWebModel> suiteChildren = new LinkedList<>();
-        List<Suite> allSuites = getAllSuitesByProject(projectId);
-        List<Test> allTests = testService.getAllTestByProjectId(projectId);
-        List<Suite> parent = allSuites.stream().filter(x -> x.getParentId() == null).collect(Collectors.toList());
-        List<Suite> children = allSuites.stream().filter(x -> x.getParentId() != null).collect(Collectors.toList());
+        List<SuiteDto> allSuites = getAllSuitesByProject(projectId);
+        List<TestDto> allTests = testService.getAllTestByProjectId(projectId);
+        List<SuiteDto> parent = allSuites.stream().filter(x -> x.getParentId() == null).toList();
+        List<SuiteDto> children = allSuites.stream().filter(x -> x.getParentId() != null).toList();
         parent.forEach(x -> {
             suiteChildren.add(new SuiteWebModel(
                     x,
@@ -104,11 +103,28 @@ public class SuiteService implements SuiteClient {
         return suiteChildren;
     }
 
-    private Collection<SuiteChild> children(Suite parent, List<Suite> childs) {
+    public List<SuiteDto> suiteAllParent(Long projectId, Long suiteId) {
+        List<SuiteDto> allSuites = getAllSuitesByProject(projectId);
+        List<SuiteDto> parentSuite = new LinkedList<>();
+        return suiteParent(suiteId, allSuites, parentSuite);
+    }
+
+    private List<SuiteDto> suiteParent(Long suiteId, List<SuiteDto> allSuites, List<SuiteDto> parentSuites) {
+        Stream<SuiteDto> stream = allSuites.stream().filter(x -> x.getId().equals(suiteId))
+                .peek(x -> {
+                    parentSuites.add(x);
+                    suiteParent(x.getParentId(), allSuites, parentSuites);
+                });
+        return parentSuites;
+    }
+
+
+
+    private Collection<SuiteChild> children(SuiteDto parent, List<SuiteDto> childs) {
         Collection<SuiteChild> suiteChildren = new LinkedList<>();
         childs.stream()
-                .filter(y -> y.getParentId() == parent)
-                .collect(Collectors.toList())
+                .filter(y -> y.getParentId().equals(parent.getId()))
+                .toList()
                 .forEach(x -> {
                     suiteChildren.add(
                             new SuiteChild(
@@ -120,18 +136,18 @@ public class SuiteService implements SuiteClient {
         return suiteChildren;
     }
 
-    private Collection<ParentWebModel> childrenNew(Suite parent, List<Suite> allSuite, List<Test> allTests) {
+    private Collection<ParentWebModel> childrenNew(SuiteDto parent, List<SuiteDto> allSuite, List<TestDto> allTests) {
         Collection<ParentWebModel> suiteChildren = new LinkedList<>();
         allTests.stream()
-                .filter(y -> y.getSuiteId().getId().equals(parent.getId()))
-                .collect(Collectors.toList())
+                .filter(y -> y.getSuiteId().equals(parent.getId()))
+                .toList()
                 .forEach(x -> {
                     suiteChildren.add(
                             new TestWebModel(x));
                 });
         allSuite.stream()
-                .filter(y -> y.getParentId().getId().equals(parent.getId()))
-                .collect(Collectors.toList())
+                .filter(y -> y.getParentId().equals(parent.getId()))
+                .toList()
                 .forEach(x -> {
                     suiteChildren.add(
                             new SuiteWebModel(x, new ArrayList<>(childrenNew(x, allSuite, allTests))));
@@ -139,14 +155,12 @@ public class SuiteService implements SuiteClient {
         return suiteChildren;
     }
 
-    private Collection<Suite> allChildren(Collection<Suite> suites, Suite parentSuite) {
-        Collection<Suite> result = new LinkedList<>();
-        Collection<Suite> child = suites.stream().filter(x -> x.getParentId() == parentSuite).collect(Collectors.toList());
+    private Collection<SuiteDto> allChildren(Collection<SuiteDto> suites, SuiteDto parentSuite) {
+        Collection<SuiteDto> result = new LinkedList<>();
+        Collection<SuiteDto> child = suites.stream().filter(x -> x.getParentId().equals(parentSuite.getId())).toList();
         child.forEach(x -> {
             result.add(x);
-            allChildren(suites, x).forEach(y -> {
-                result.add(y);
-            });
+            result.addAll(allChildren(suites, x));
         });
         return result;
     }
